[package]
name = "morph3d"
version = "0.1.0"
edition = "2021"
license = "MIT Or Apache 2.0"
description = "Yet another assimp alternative (obj, gltf & glb is supported). DAE, Stl and Usdz support is comming soon."
repository = ""

[dependencies]
dae-parser = "0.10.0"
gltf = "1.4.1"
nalgebra = "0.33.0"
pk_stl = "0.3.1"
tobj = "4.0.2"
usdz = "0.0.1"
