[package]
name = "morph3d"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Yet another assimp alternative (obj, gltf & glb is supported). DAE, Stl and Usdz support is comming soon."
categories = ["graphics", "game-development", "parser-implementations", "parsing"]

repository = "https://github.com/v2ny/morph3d"
documentation = "https://github.com/v2ny/morph3d/blob/master/README.md"
authors = ["v2ny"]

[dependencies]
dae-parser = "0.10.0"
gltf = "1.4.1"
nalgebra = "0.33.0"
pk_stl = "0.3.1"
tobj = "4.0.2"
usdz = "0.0.1"
